Limpando o código